--- a/isikacek/templates/_legal_lang.html
+++ b/isikacek/templates/_legal_lang.html
@@ -2,17 +2,17 @@
     <span class="legal">
         <span>© Igor Sikaček 2018.</span>
         <span>
-            <a href="/attribution{{ link_suffix }}">{{ _('images') }}</a>
-            <a href="/terms{{ link_suffix }}">{{ _('terms') }}</a>
-            <a href="/privacy{{ link_suffix }}">{{ _('privacy') }}</a>
+            <a href="/attribution/{{ link_suffix }}">{{ _('images') }}</a>
+            <a href="/terms/{{ link_suffix }}">{{ _('terms') }}</a>
+            <a href="/privacy/{{ link_suffix }}">{{ _('privacy') }}</a>
         </span>
     </span>
     <span class="lang-ui">
         <a href="{{request.path}}?lang=hr">
-            <img class="hr" src="/static/lang_hr.png" alt="" />
+            <img class="hr" src="/static/lang_hr.png" alt="Hrvatski" />
         </a>
         <a href="{{request.path}}?lang=en">
-            <img class="en" src="/static/lang_en.png" alt="" />
+            <img class="en" src="/static/lang_en.png" alt="English" />
         </a>
     </span>
 </span>
