--- a/isikacek/templates/attribution.html
+++ b/isikacek/templates/attribution.html
@@ -1,73 +1,70 @@
 {% extends "base.html" %}
 {% block head %}
-    <style>
-    </style>
 {% endblock %}
 {% block content %}
     <h1>{{ _('attributions_title') }}</h1>
     <p>{{ _('attributions_about') }}</p>
     <ul>
         <li>
-            <a href="http://www.freepik.com">{{ _('attributions_1') }} makyzz / Freepik</a>
+            <a href="http://www.freepik.com" rel="noreferrer">{{ _('attributions_1') }} makyzz / Freepik</a>
             -
-            <a href="https://www.freepik.com/free-vector/flat-icon-set-for-business_1063632.htm">Flat icon set for business</a>
+            <a href="https://www.freepik.com/free-vector/flat-icon-set-for-business_1063632.htm" rel="noreferrer">Flat icon set for business</a>
         </li>
         <li>
-            <a href="http://www.freepik.com">{{ _('attributions_1') }} Newelement / Freepik</a>
+            <a href="http://www.freepik.com" rel="noreferrer">{{ _('attributions_1') }} Newelement / Freepik</a>
             -
-            <a href="https://www.freepik.com/free-vector/web-design-banners-set_957753.htm">Web design banners</a>
+            <a href="https://www.freepik.com/free-vector/web-design-banners-set_957753.htm" rel="noreferrer">Web design banners</a>
         </li>
         <li>
-            <a href="http://www.freepik.com">{{ _('attributions_1') }} Graphiqastock / Freepik</a>
+            <a href="http://www.freepik.com" rel="noreferrer">{{ _('attributions_1') }} Graphiqastock / Freepik</a>
             -
-            <a href="https://www.freepik.com/free-vector/web-programming-background_1027144.htm">Web programming background</a>
+            <a href="https://www.freepik.com/free-vector/web-programming-background_1027144.htm" rel="noreferrer">Web programming background</a>
         </li>
         <li>
-            <a href="http://www.freepik.com">{{ _('attributions_1') }} macrovector / Freepik</a>
+            <a href="http://www.freepik.com" rel="noreferrer">{{ _('attributions_1') }} macrovector / Freepik</a>
             -
-            <a href="https://www.freepik.com/free-vector/data-analysis-icons_1530355.htm">Data analysis icons</a>
+            <a href="https://www.freepik.com/free-vector/data-analysis-icons_1530355.htm" rel="noreferrer">Data analysis icons</a>
         </li>
-
     </ul>
     <p>{{ _('attributions_404') }}</p>
     <ul>
         <li>
-            <a href="https://www.vecteezy.com/members/zhaolifang">zhaolifang</a>
+            <a href="https://www.vecteezy.com/members/zhaolifang" rel="noreferrer">zhaolifang</a>
             -
-            <a href="https://www.vecteezy.com/vector-art/107196-server-rack-vectors">Server Rack Vectors</a>
+            <a href="https://www.vecteezy.com/vector-art/107196-server-rack-vectors" rel="noreferrer">Server Rack Vectors</a>
             -
-            <a target="_blank" href="https://www.vecteezy.com">{{ _('attributions_2') }} Vecteezy!</a>
+            <a target="_blank" href="https://www.vecteezy.com" rel="noreferrer">{{ _('attributions_2') }} Vecteezy!</a>
         </li>
         <li>
-            <a href="https://www.vecteezy.com/members/skaterjob">skaterjob</a>
+            <a href="https://www.vecteezy.com/members/skaterjob" rel="noreferrer">skaterjob</a>
             -
-            <a href="https://www.vecteezy.com/vector-art/126528-yakuza-vector-design">Yakuza Vector Design</a>
+            <a href="https://www.vecteezy.com/vector-art/126528-yakuza-vector-design" rel="noreferrer">Yakuza Vector Design</a>
             -
-            Vector illustration credit: <a target="_blank" href="https://www.vecteezy.com">Vecteezy.com</a>
+            {{ _('attributions_5') }} <a target="_blank" href="https://www.vecteezy.com" rel="noreferrer">Vecteezy.com</a>
         </li>
     </ul>
     <p>{{ _('attributions_500') }}</p>
     <ul>
         <li>
-            <a href="https://www.vecteezy.com/members/zhaolifang">zhaolifang</a>
+            <a href="https://www.vecteezy.com/members/zhaolifang" rel="noreferrer">zhaolifang</a>
             -
-            <a href="https://www.vecteezy.com/vector-art/107196-server-rack-vectors">Server Rack Vectors</a>
+            <a href="https://www.vecteezy.com/vector-art/107196-server-rack-vectors" rel="noreferrer">Server Rack Vectors</a>
             -
-            <a target="_blank" href="https://www.vecteezy.com">{{ _('attributions_2') }} Vecteezy!</a>
+            <a target="_blank" href="https://www.vecteezy.com" rel="noreferrer">{{ _('attributions_2') }} Vecteezy!</a>
         </li>
         <li>
-            <a href="https://www.vecteezy.com/members/yoosillyone">yoosillyone</a>
+            <a href="https://www.vecteezy.com/members/yoosillyone" rel="noreferrer">yoosillyone</a>
             -
-            <a href="https://www.vecteezy.com/vector-art/127952-broken-window-in-blue-background">Broken Window In Blue Background</a>
+            <a href="https://www.vecteezy.com/vector-art/127952-broken-window-in-blue-background" rel="noreferrer">Broken Window In Blue Background</a>
             -
-            <a rel="nofollow" href="https://www.vecteezy.com">{{ _('attributions_3') }}: Vecteezy.com</a>
+            <a rel="nofollow" href="https://www.vecteezy.com" rel="noreferrer">{{ _('attributions_3') }}: Vecteezy.com</a>
         </li>
         <li>
-            <a href="https://www.vecteezy.com/members/seabranddesign">seabranddesign</a>
+            <a href="https://www.vecteezy.com/members/seabranddesign" rel="noreferrer">seabranddesign</a>
             -
-            <a href="https://www.vecteezy.com/vector-art/154633-smoke-stack-vector-background">Smoke Stack Vector Background</a>
+            <a href="https://www.vecteezy.com/vector-art/154633-smoke-stack-vector-background" rel="noreferrer">Smoke Stack Vector Background</a>
             -
-            {{ _('attributions_4') }} <a target="_blank" href="https://www.vecteezy.com">www.vecteezy.com</a>
+            {{ _('attributions_4') }} <a target="_blank" href="https://www.vecteezy.com" rel="noreferrer">www.vecteezy.com</a>
         </li>
     </ul>
 {% endblock %}
