--- a/isikacek/templates/projects/awk-it.html
+++ b/isikacek/templates/projects/awk-it.html
@@ -108,7 +108,7 @@
             <li>{{ _('awk-it-custom-13') }}</li>
         </ul>
         <a href="https://github.com/isikacek/awk-it">
-            <img id="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub">
+            <img id="github" src="/static/github.png" alt="Fork me on GitHub">
         </a>
     </div>
 {% endblock %}
